--- a/lion/index.html
+++ b/lion/index.html
@@ -497,16 +497,16 @@
                       <h3>Contact us</h3>
                       <ul class="loca">
                         <li>
-                          <a href="#"><img src="icon/loc.png" alt="#" /></a>145
-                          londone <br />uk
+                          <a href="#"><img src="icon/loc.png" alt="#" /></a>
+                         Federal University of agriculture abeokuta 
                         </li>
                         <li>
                           <a href="#"><img src="icon/call.png" alt="#" /></a
-                          >+12586954775
+                          >08166265331
                         </li>
                         <li>
                           <a href="#"><img src="icon/email.png" alt="#" /></a
-                          >demo@gmail.com
+                          >BfngroupA@gmail.com
                         </li>
                       </ul>
                     </div>
